--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -1,7 +1,9 @@
 .experience_container{
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    /* grid-template-columns: 1fr 1fr; */
+    grid-template-columns:  1fr;
     gap: 2rem;
+    padding-right: 1rem;
 }
 
 .experience_container > div{
