--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -38,8 +38,8 @@ header{
 
 /* My Image */
 .me{
-    background: linear-gradient(var(--color-primary),transparent);
-    width: 22rem;
+    /* background: linear-gradient(var(--color-primary),transparent); */
+    width: 20rem;
     height: 35rem;
     position: absolute;
     left: calc(50% - 11rem);
